--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "thrift": "^0.13.0",
+    "node-bignumber": "^1.2.1",
+    "thrift": "^0.11.0",
+    "utf8": "^3.0.0",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
