--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "thrift": "^0.11.0",
     "utf8": "^3.0.0",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.2",
+    "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
