--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "js-sha256": "^0.9.0",
     "node-bignumber": "^1.2.1",
     "thrift": "^0.11.0",
     "utf8": "^3.0.0",
