--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "thrift": "^0.11.0",
     "unicode-substring": "^1.0.0",
     "utf8": "^3.0.0",
+    "v-emoji-picker": "^2.2.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.2",
     "vue-router": "^3.3.4",
