Add IDB Support

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "error-polyfill": "^0.1.2",
+    "idb": "^5.0.4",
     "js-sha256": "^0.9.0",
     "node-bignumber": "^1.2.1",
+    "node-int64": "^0.4.0",
     "thrift": "^0.11.0",
     "unicode-substring": "^1.0.0",
     "utf8": "^3.0.0",
