Improve UI/UX and Add times

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "error-polyfill": "^0.1.2",
     "idb": "^5.0.4",
     "js-sha256": "^0.9.0",
+    "moment": "^2.27.0",
     "node-bignumber": "^1.2.1",
-    "node-int64": "^0.4.0",
     "thrift": "^0.11.0",
     "utf8": "^3.0.0",
     "v-emoji-picker": "^2.3.0",
